// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should rename one table. 1`] = `
{
  "id": "MAIN",
  "def": [
    {
      "id": "P_DDS",
      "def": {
        "id": "P_RENAME_TABLE",
        "def": [
          {
            "table": "people",
            "newName": "persons"
          }
        ]
      }
    }
  ]
}
`;

exports[`Should rename one table. 2`] = `
{
  "id": "MAIN",
  "def": [
    {
      "id": "P_DDS",
      "def": {
        "id": "P_RENAME_TABLE",
        "def": [
          {
            "table": "people",
            "newName": "persons"
          }
        ]
      }
    }
  ]
}
`;

exports[`Should rename several tables. 1`] = `
{
  "id": "MAIN",
  "def": [
    {
      "id": "P_DDS",
      "def": {
        "id": "P_RENAME_TABLE",
        "def": [
          {
            "table": "people",
            "newName": "persons"
          },
          {
            "table": "homes",
            "newName": "houses"
          },
          {
            "table": "cats",
            "newName": "pets"
          },
          {
            "table": "test",
            "newName": "tests"
          }
        ]
      }
    }
  ]
}
`;
